# kjq_navigation

./: CMakeLists.txt  LICENSE  README.md  notes.md  package.xml
include/kjq_navigation/: AStarPlanner.hpp  BiPridgeNode.hpp  GaussSmoothen.hpp  LocalPlanner.hpp  MovementNode.hpp  RandomDriveNode.hpp
launch/: drive.launch  gen_map.launch  gmapping.launch  kjq.launch  localization.launch  search.launch
maps/: bigger_map.yaml  first_map.yaml  mymap.pgm  mymap.yaml
rviz/: mapping.rviz  milestone3.rviz  test_costmap.rviz
scripts/: initiate.bash
src/: AStarPlanner.cpp  AStarTestNode.cpp  DetectBlock.cpp  LocalPlanner.cpp  MovementNode.cpp  PiBridgeNode.cpp  RandomDriveNode.cpp
test/: test_kjq_navigation.cpp
