<?xml version="1.0"?>
<package format="2">
  <name>kjq_navigation</name>
  <version>0.1.0</version>
  <description>Project Code for MIE444.</description>
  <maintainer email="christophertzechan@gmail.com">Chris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!--<depend>eigen</depend>-->
  <!--<depend>boost</depend>-->
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
</package>
